--- a/_includes/post_pagination.html
+++ b/_includes/post_pagination.html
@@ -1,20 +1,21 @@
 {% include base_path %}
 
-{% if page.previous or page.next or page.paperurl %}
+<!-- 新增下载链接部分 -->
+{% if page.paperurl %}
+<div class="download-notice" style="margin: 2rem 0; text-align: center;">
+  <a href="{{ page.paperurl | relative_url }}" class="btn btn--primary" download>
+    <i class="fas fa-file-pdf"></i> 下载完整文档
+  </a>
+</div>
+{% endif %}
+
+{% if page.previous or page.next %}
   <nav class="pagination">
     {% if page.previous %}
       <a href="{{ base_path }}{{ page.previous.url }}" class="pagination--pager" title="{{ page.previous.title | markdownify | strip_html }}">{{ site.data.ui-text[site.locale].pagination_previous | default: "Previous" }}</a>
     {% else %}
       <a href="#" class="pagination--pager disabled">{{ site.data.ui-text[site.locale].pagination_previous | default: "Previous" }}</a>
     {% endif %}
-    
-	<!-- 新增下载按钮 -->
-    {% if page.paperurl %}
-      <a href="{{ page.paperurl | relative_url }}" class="pagination--pager" title="下载文档" download>
-        <i class="fas fa-download"></i>
-      </a>
-    {% endif %}
-    
     {% if page.next %}
       <a href="{{ base_path }}{{ page.next.url }}" class="pagination--pager" title="{{ page.next.title | markdownify | strip_html }}">{{ site.data.ui-text[site.locale].pagination_next | default: "Next" }}</a>
     {% else %}
