--- a/_includes/tag-list.html
+++ b/_includes/tag-list.html
@@ -1,5 +1,12 @@
 {% include base_path %}
 
+<!-- 新增下载链接部分 -->
+{% if page.paperurl %}
+  <a href="{{ page.paperurl | relative_url }}" class="pagination--pager" title="下载文档" download>
+    <i class="fas fa-download"></i>
+  </a>
+{% endif %}
+
 {% case site.tag_archive.type %}
   {% when "liquid" %}
     {% assign path_type = "#" %}
