--- a/_includes/tag-list.html
+++ b/_includes/tag-list.html
@@ -1,13 +1,12 @@
 {% include base_path %}
 
 <!-- 新增下载链接部分 -->
-
 {% if page.paperurl %}
-  <div class="download-notice">
-    <a href="{{ page.paperurl | relative_url }}" class="btn btn--primary" title="下载文档" download>
-      <i class="fas fa-download"></i>
-    </a>
-  </div>
+<div class="download-notice" style="margin: 2rem 0; text-align: center;">
+  <a href="{{ page.paperurl | relative_url }}" class="btn btn--primary" download>
+    <i class="fas fa-file-pdf"></i> Download Blog Post
+  </a>
+</div>
 {% endif %}
 
 {% case site.tag_archive.type %}
