--- a/_includes/tag-list.html
+++ b/_includes/tag-list.html
@@ -2,7 +2,7 @@
 
 <!-- 新增下载链接部分 -->
 {% if page.paperurl %}
-<div class="download-notice" style="margin: 2rem 0; text-align: center;">
+<div class="download-notice">
   <a href="{{ page.paperurl | relative_url }}" class="btn btn--primary" download>
     <i class="fas fa-file-pdf"></i> Download Blog Post
   </a>
