--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -52,19 +52,39 @@
     <p class="archive__item-excerpt" itemprop="description"><p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}<strong><a href="{{ base_path }}{{ post.url }}" rel="permalink"> Read more</a></strong></p></p>
     {% endif %}
     
-    {% if post.citation and post.paperurl and post.slidesurl %}
-      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Paper</a> | <a href="{{ post.slidesurl }}">Download Slides</a></p>
-    {% elsif post.citation and post.paperurl %}
-      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Paper</a></p>
-    {% elsif post.citation and post.slidesurl %}
-      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.slidesurl }}">Download Slides</a></p>
-    {% elsif post.citation %}
-      <p>Recommended citation: {{ post.citation }}</p>
-    {% elsif post.paperurl %}
-      <p><a href=" {{ post.paperurl }} ">Download Paper</a></p>
-    {% elsif post.slidesurl %}
-      <p><a href="{{ post.slidesurl }}">Download Slides</a></p>
-    {% endif %}
+    {% if post.citation or post.paperurl or post.slidesurl or post.arXiv or post.GitHub %}
+	  <p>
+		{% if post.citation %}
+			Recommended citation: {{ post.citation }}
+			{% if post.paperurl or post.slidesurl or post.arXiv or post.GitHub %}<br>{% endif %}
+		{% endif %}
+    
+		{% comment %} 动态构建链接列表 {% endcomment %}
+		{% assign links = "" | split: "" %}
+    
+		{% if post.paperurl %}
+			{% capture link %}<a href="{{ post.paperurl }}">Download Paper</a>{% endcapture %}
+			{% assign links = links | push: link %}
+		{% endif %}
+    
+		{% if post.slidesurl %}
+			{% capture link %}<a href="{{ post.slidesurl }}">Download Slides</a>{% endcapture %}
+			{% assign links = links | push: link %}
+		{% endif %}
+    
+		{% if post.arXiv %}
+			{% capture link %}<a href="{{ post.arXiv }}">arXiv</a>{% endcapture %}
+			{% assign links = links | push: link %}
+		{% endif %}
+    
+		{% if post.GitHub %}
+			{% capture link %}<a href="{{ post.GitHub }}">GitHub</a>{% endcapture %}
+			{% assign links = links | push: link %}
+		{% endif %}
+    
+		{{ links | join: " | " }}
+      </p>
+	{% endif %}
 
   </article>
 </div>
